2005-07-31  Guilhem Lavaux <guilhem@kaffe.org>
	Riccardo Mottola  <multix@gmail.com>

	* kaffe/kaffevm/kaffe-gc/gc-incremental.c
	(finaliserJob): Protect the access to the block structure
	as the heap may grow at the same time.
	
2005-07-31 Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* test/regression/BufferedInputStreamAvailableTest.java:
	New file.

	* test/regression/Makefile.am:
	Added BufferedInputStreamAvailableTest.java.

	* test/regression/Makefile.in: regenerated.

2005-07-26 Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-07-29  Roman Kennke  <roman@kennke.org>

        * javax/swing/text/StyledEditorKit.java: Added the remaining API
        comments.

	2005-07-29  Lillian Angel  <langel@redhat.com>

        * javax/swing/MenuSelectionManager.java
        (isComponentPartOfCurrentMenu): Fixed to prevent NPE.
        * javax/swing/plaf/basic/BasicMenuUI.java
        (popupVisible): Likewise.

	2005-07-29  David Gilbert  <david.gilbert@object-refinery.com>

        * java/awt/event/MouseWheelEvent.java: fixed typo in API docs.

	2005-07-29  Roman Kennke  <roman@kennke.org>

        * javax/swing/text/DefaultStyledDocument.java: Added
        comments all over.
        * javax/swing/text/StyledEditorKit: Likewise.

	2005-07-29  Lillian Angel  <langel@redhat.com>

        * javax/swing/JTextField.java
        (insertString): Added in check for null to resolve a NPE.
        * javax/swing/text/GapContent.java
        (getOffset): Added in check for mark = gapStart because
        if mark = gapStart = 0, then a negative is returned. This was
        not right.

	2005-07-29  Roman Kennke  <roman@kennke.org>

        * javax/swing/plaf/basic/BasicEditorPaneUI.java: Added API
        comments all over.
        * javax/swing/plaf/basic/BasicTextUI.java: Likewise.

	2005-07-29  Roman Kennke  <roman@kennke.org>

        * javax/swing/text/DefaultStyledDocument.java
        (split): Moved throw statement into proper else clause.